--- a/src/components/CheckoutForm.css
+++ b/src/components/CheckoutForm.css
@@ -1,3 +1,7 @@
+#payment-form {
+  width: 100%;
+}
+
 #submit {
   font-family: Arial, sans-serif;
   font-size: 16px;
@@ -17,6 +21,5 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
   cursor: pointer;
   margin-top: 10px;
-  min-width: 150px;
-  min-height: 40px;
+  width: 100%;
 }
